--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "grunt": "^1.0.1",
     "angular": "^1.5.5",
     "angular-route": "^1.5.5",
-    "angular-cookies": "^1.5.5"
+    "angular-cookies": "^1.5.5",
+    "js-sha256": "^0.3.0"
   }
 }
