--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bower": "^1.7.9"
+    "bower": "^1.7.9",
+    "json-server": "^0.8.14"
   },
   "devDependencies": {
     "grunt-json-server": "^0.1.2"
