--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "^1.5.5",
     "angular-route": "^1.5.5",
     "angular-cookies": "^1.5.5",
-    "js-sha256": "^0.3.0"
+    "js-sha256": "^0.3.0",
+    "bootstrap": "^3.3.6"
   }
 }
